Stats: fix z-index of stickies

--- a/src/public/less/pages/statistics.less
+++ b/src/public/less/pages/statistics.less
@@ -283,7 +283,7 @@
 		position: -webkit-sticky;
 		position: sticky;
 		top: -1px;
-		z-index: 1000;
+		z-index: 100;
 		padding: 0 24px;
 
 		&_content-wrapper {
